--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,18 +50,18 @@ services:
 #      - tg_bot
 #
 #  #   To enable redis cache uncomment the following lines
-#  redis_cache:
-#    image: redis:6.2-alpine
-#    container_name: "${REDIS_CONTAINER_NAME}"
-#    restart: always
-#    command: redis-server --port $REDIS_PORT --save 20 1 --loglevel warning --requirepass $REDIS_PASSWORD
-#    env_file:
-#      - ".env"
-#    volumes:
-#      - ./cache:/data
-#    networks:
-#      - tg_bot
-#
+  redis_cache:
+    image: redis:6.2-alpine
+    container_name: "${REDIS_CONTAINER_NAME}"
+    restart: always
+    command: redis-server --port $REDIS_PORT --save 20 1 --loglevel warning --requirepass $REDIS_PASSWORD
+    env_file:
+      - ".env"
+    volumes:
+      - ./cache:/data
+    networks:
+      - tg_bot
+
 #  webhook:
 #    image: "webhook"
 #    container_name: "${WEBHOOK_CONTAINER_NAME}"
