--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
-aiogram~=3.0
-environs~=9.0
-redis
-betterlogging
+aiogram==3.1.1
+environs==9.5.0
+redis==5.0.1
+betterlogging~=0.2.1
 
 # # For enabling api:
-# backoff
-# ujson
-# yarl
+backoff~=2.2.1
+ujson~=5.8.0
+yarl~=1.9.2
 
 # # For PostgreSQL sqlalchemy + alembic:
-# sqlalchemy~=2.0
-# alembic~=1.0
-# asyncpg
+sqlalchemy==2.0.22
+alembic==1.12.0
+asyncpg
+
+loguru~=0.7.2
+aiohttp==3.8.6
