--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,44 +59,44 @@ services:
     networks:
       - tg_bot
 
-  webhook:
-    image: "webhook"
-    container_name: "${WEBHOOK_CONTAINER_NAME}"
-    stop_signal: SIGINT
-    build:
-      context: .
-      dockerfile: infrastructure/webhook/Dockerfile
-    working_dir: "/usr/src/app/${WEBHOOK_APP_NAME}"
-    volumes:
-      - .:/usr/src/app/${WEBHOOK_APP_NAME}
-    command: [ "uvicorn", "infrastructure.webhook.app:app", "--host", "0.0.0.0", "--port", "8000" ]
-    restart: always
-    env_file:
-      - ".env"
-    networks:
-      - tg_bot
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "200k"
-        max-file: "10"
-
-  reverse-proxy:
-    container_name: nginx-reverse-proxy
-    stop_signal: SIGINT
-    restart: always
-    image: nginx:latest
-    ports:
-      - '80:80'
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-    networks:
-      - tg_bot
+#   webhook:
+#     image: "webhook"
+#     container_name: "${WEBHOOK_CONTAINER_NAME}"
+#     stop_signal: SIGINT
+#     build:
+#       context: .
+#       dockerfile: infrastructure/webhook/Dockerfile
+#     working_dir: "/usr/src/app/${WEBHOOK_APP_NAME}"
+#     volumes:
+#       - .:/usr/src/app/${WEBHOOK_APP_NAME}
+#     command: [ "uvicorn", "infrastructure.webhook.app:app", "--host", "0.0.0.0", "--port", "8000" ]
+#     restart: always
+#     env_file:
+#       - ".env"
+#     networks:
+#       - tg_bot
+#     logging:
+#       driver: "json-file"
+#       options:
+#         max-size: "200k"
+#         max-file: "10"
+#
+#   reverse-proxy:
+#     container_name: nginx-reverse-proxy
+#     stop_signal: SIGINT
+#     restart: always
+#     image: nginx:latest
+#     ports:
+#       - '80:80'
+#     volumes:
+#       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+#     networks:
+#       - tg_bot
 
 networks:
   tg_bot:
     driver: bridge
 
 # Uncomment the following lines if you want to use a volume for the database
-volumes:
-  pgdata: { }
+# volumes:
+#   pgdata: { }
