--- a/.env.dist
+++ b/.env.dist
@@ -1,22 +1,24 @@
-BOT_CONTAINER_NAME=bot_container_name
-BOT_IMAGE_NAME=botimage_name
-BOT_NAME=mybotname
-BOT_TOKEN=123456:Your-TokEn_ExaMple
-ADMINS=123456,654321
-USE_REDIS=False
+BOT_CONTAINER_NAME=XpymXpymBot
+BOT_IMAGE_NAME=xpymxpymbot_name
+BOT_NAME=testjokerbot
+BOT_TOKEN=1475930893:AAGpG7Au3FepSnNOoSCYYJRreWOPmjycNuo
+ADMINS=252810436
+USE_REDIS=True
 
-#PG_CONTAINER_NAME=pg_database
-#POSTGRES_USER=someusername
-#POSTGRES_PASSWORD=postgres_pass12345
-#POSTGRES_DB=bot
-#DB_HOST=pg_database
+NETBOX_URL=https://netbox.avantel.ru/
+NETBOX_API=7f50ada4a4a66d4b2385e4f8f59a069bc219089b
 
-# REDIS_HOST=redis_cache
-# REDIS_PORT=6388
-# REDIS_DB=1
-# REDIS_PASSWORD=someredispass
-# REDIS_CONTAINER_NAME=redis_bot
+PG_CONTAINER_NAME=pg_database
+POSTGRES_USER=joker
+POSTGRES_PASSWORD=Mrj0keer155
+POSTGRES_DB=bot
+DB_HOST=pg_database
 
+REDIS_HOST=redis_cache
+REDIS_PORT=6388
+REDIS_DB=1
+REDIS_PASSWORD=123
+REDIS_CONTAINER_NAME=redis_bot
 
 #WEBHOOK_CONTAINER_NAME=webhook
 #WEBHOOK_EXPOSE=8001
