--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiogram==3.1.1
 environs==9.5.0
 redis==5.0.1
 betterlogging~=0.2.1
+pynetbox==7.2.0
 
 # # For enabling api:
 backoff~=2.2.1
@@ -15,3 +16,5 @@ asyncpg
 
 loguru~=0.7.2
 aiohttp==3.8.6
+urllib3~=2.0.7
+requests~=2.31.0
